--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "path": "^0.12.7",
+    "react-block-ui": "^1.3.5",
+    "react-loaders": "^3.0.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
